# hhru_parser

./: .gitignore  pyproject.toml
scripts/: compute_stats.py  test_requests.py
src/hhru_parser/: logging_setup.py  main.py  models.py
src/hhru_parser/bd/: bd_vacancy.py
src/hhru_parser/methods/: http.py
